--- a/picom.conf
+++ b/picom.conf
@@ -102,8 +102,7 @@ fade-out-step = 0.03;
 # fade-delta = 10
 
 # Specify a list of conditions of windows that should not be faded.
- fade-exclude = [
-]
+# fade-exclude = []
 
 # Do not fade on window open/close.
 # no-fading-openclose = false
@@ -119,11 +118,11 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.9;
+inactive-opacity = 0.95;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.9;
+frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0
@@ -140,8 +139,7 @@ inactive-opacity-override = false;
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'"
- ];
+focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -156,9 +154,15 @@ focus-exclude = [ "class_g = 'Cairo-clock'"
 # opacity-rule = []
 opacity-rule = [
   "90:class_g = 'URxvt' && focused",
-  "90:class_g = 'URxvt' && !focused"
-
+  "90:class_g = 'URxvt' && !focused",
+  "100:class_g = 'firefox' && focused",
+  "100:class_g = 'firefox' && !focused",
+  "100:class_g = 'nautilus' && focused",
+  "100:class_g = 'nautilus' && !focused",
+  "100:class_g = 'Spotity' && focused",
+  "100:class_g = 'Spotity' && !focused",
 ];
+
 
 #################################
 #     Background-Blurring       #
@@ -166,9 +170,8 @@ opacity-rule = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
- blur-method = "dual_kawse";
-# blur-strength = 25;
- blur-size = 3
+# blur-method = 
+# blur-size = 12
 #
 # blur-deviation = false
 
@@ -217,7 +220,7 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 # backend = 'glx'
-backend = "glx";
+backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
@@ -422,10 +425,9 @@ log-level = "warn";
 #
 wintypes:
 {
- tooltip = { shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
- dropdown_menu = { opacity = false; };
- popup_menu    = { opacity = false; };
+  popup_menu = { opacity = 0.9; }
+  dropdown_menu = { opacity = 0.9; }
 };
-
