--- a/picom.conf
+++ b/picom.conf
@@ -12,10 +12,10 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 8;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
@@ -66,9 +66,11 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS@:c",
+  "class_g = 'i3-frame'",
+  "class_g ?= 'i3bar'",
 ];
-
+shadow-exclude-reg = "x20+0+0";
 # Specify a X geometry that describes the region in which shadow should not
 # be painted in, such as a dock window region. Use 
 #    shadow-exclude-reg = "x10+0+0"
@@ -99,7 +101,7 @@ fade-in-step = 0.03;
 fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+ fade-delta = 8
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
@@ -122,17 +124,17 @@ inactive-opacity = 0.95;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
+frame-opacity = 1.0;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-# menu-opacity = 1.0
+menu-opacity = 0.97;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+#active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -157,13 +159,22 @@ opacity-rule = [
   "90:class_g = 'URxvt' && !focused",
   "100:class_g = 'firefox' && focused",
   "100:class_g = 'firefox' && !focused",
-  "100:class_g = 'nautilus' && focused",
-  "100:class_g = 'nautilus' && !focused",
+  "100:class_g = 'Nautilus' && focused",
+  "100:class_g = 'Nautilus' && !focused",
   "100:class_g = 'Spotity' && focused",
   "100:class_g = 'Spotity' && !focused",
+  "100:class_g = 'Vivaldi-stable' && focused",
+  "100:class_g = 'Vivaldi-stable' && !focused",
+  "100:class_g = 'vlc' && focused",
+  "100:class_g = 'vlc' && !focused",
+  "97:class_g = 'kitty' && focused",
+  "85:class_g = 'kitty' && !focused",
+  "98:class_g = 'Gedit' && focused",
+  "88:class_g = 'Gedit' && !focused",
+  "85:class_g *?= 'Rofi'"
 ];
-
-
+ 
+#
 #################################
 #     Background-Blurring       #
 #################################
@@ -179,7 +190,7 @@ opacity-rule = [
 # Bad in performance, with driver-dependent behavior. 
 # The name of the switch may change without prior notifications.
 #
-# blur-background = false
+blur-background = true
 
 # Blur background of windows when the window frame is not opaque. 
 # Implies:
@@ -224,7 +235,7 @@ backend = "xrender";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true
+vsync = false
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
